--- a/pages/personl/personl.wxml
+++ b/pages/personl/personl.wxml
@@ -1,13 +1,13 @@
 <!--pages/personl/personl.wxml-->
 <text></text>
 <view class="personalhead">
-  <view class='personal_set'>
+  <view class='personal_set' bindtap='_set'>
     <text class='iconfont icon-genggai'></text> 设置
   </view>
 
   <view class='personalzl'>
-    <view class='personalfan'>
-      <text class='num'>100</text>
+    <view class='personalfan' bindtap='fans'>
+      <text class='num'>{{alldata.myfans}}</text>
       <text class='title'>粉丝</text>
     </view>
     <view class='personal_logo'>
@@ -17,7 +17,7 @@
       <view class='personal_title'>向昱筱</view>
     </view>
     <view class='personal_gz'>
-      <text class='num'>20</text>
+      <text class='num'>{{alldata.myconcern}}</text>
       <text class='title'>我的关注</text>
     </view>
   </view>
@@ -27,12 +27,12 @@
 
 <view class='select_group'>
   <view class='select_item'>
-      <text class='mynum'>100</text>
+      <text class='mynum'>{{alldata.mysend}}</text>
       <text class='mytitle'>我的发布</text>
   </view>
   <view class='line'></view>
   <view class='select_item'>
-    <text class='mynum'>20</text>
+    <text class='mynum'>{{alldata.mycollection}}</text>
       <text class='mytitle'>我的收藏</text>
   </view>
 </view>
