--- a/template/template.wxss
+++ b/template/template.wxss
@@ -372,7 +372,6 @@
 .view_list {
   width: 192rpx;
   height: 192rpx;
-  background-color: red;
   margin-bottom: 32rpx;
 }
 
@@ -1273,9 +1272,61 @@ font-family:PingFang-SC-Medium;
 color:rgba(255,255,255,1);
 }
 .myvideo{
-  width: 320rpx;
-  height: 320rpx;
+  width: 360rpx;
+  height: 360rpx;
+  display: block;
   background-color: RGBA(40, 213, 203, 1);
   margin-left: 24rpx;
   margin-top: 24rpx;
+}
+
+.buy{
+  width:100%;
+  height: 88rpx;
+  box-sizing: border-box;
+  margin-top:16rpx;
+  background-color: rgba(255, 255, 255, 1);
+  padding: 0rpx 22rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.buy_title{
+  font-size:26rpx;
+font-family:PingFang-SC-Medium;
+color:rgba(0,0,0,1);
+}
+.icon-arrow{
+  font-size: 30rpx;
+  color: RGBA(153, 153, 153, 1);
+}
+
+.myadder{
+  justify-content: flex-start;
+}
+
+.myadder_selectGroup{
+  width: 500rpx;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.myadder_selectItem{
+  width: 140rpx;
+  height: 70rpx;
+  box-sizing: border-box;
+  border: 1rpx solid RGBA(153, 153, 153, 1);
+  border-radius:5rpx;
+  text-align: center;
+  line-height: 65rpx;
+  color:RGBA(102, 102, 102, 1);
+  font-size: 26rpx;
+  margin-right: 28rpx;
+}
+
+.myadder_selectItemActive{
+  background-color: RGBA(74, 144, 226, 1);
+  border: 1rpx solid RGBA(74, 144, 226, 1);
+  color: white;
 }
